<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_ajustes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ajustes"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        style="@style/Nombres_lista"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_idioma"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/idoma"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_ajustes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        style="@style/opciones_ajustes"/>

    <Switch
        android:id="@+id/switch_idioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_idioma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_switch_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habilitar_borrado"
        app:layout_constraintTop_toBottomOf="@id/switch_idioma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        style="@style/opciones_ajustes"/>

    <Switch
        android:id="@+id/switch_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_switch_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acerca"
        app:layout_constraintTop_toBottomOf="@id/switch_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/boton_cerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_seccion"
        style="@style/botones"
        app:layout_constraintTop_toBottomOf="@id/about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>